# win103-byteexact

./: .gitignore  CHANGELOG.md  GITHUB-CHECKLIST.md  LICENSE  PROGRESS.md  README.md  justfile  progress.txt  requirements.txt  setup1.sh  tmp_diag.py  tmp_lst_check.py  tmp_zeros.py
bootstrap/: archive-version.sh  build_from_source.py  check-fn38.sh  compare-kernel.sh  debug-bulk-fail.sh  debug-ld-rip.sh  diagnose_msdos_diff.py  disasm_to_masm.py  disasm_win_com.py  eta.sh  exe2bin_dossym_stub.asm  extract-win103.sh  extract_segments.py  extract_win_com.py  find_splash_bitmap_v2.py  find_splash_bitmap_v3.py  find_splash_fast.py  find_splash_v4.py  generate_all_scaffolds.py  ghidra-paths.sh  hunt_logo_in_ovl.py  launch_vanilla_win103.py  make-mod-elias-windows.py  make-mod-menubar.py  make-mod-win104.sh  map_win_data_region.py  puredb_convert.py  py_exe2bin.py  reset-and-next.sh  sanitize-only.sh  semantic_batch_pass.py  setup-upstream-build.sh  status-summary.sh  survey_asm_format.py  survey_pipeline_gap.py  test_keystone.py  try-link-kernel.sh  try_assemble_db_source.py  validate_py_exe2bin.py
bootstrap/analyze/: analyze_remaining_patterns.py  db_convert_blocks.py  db_convert_keystone.py  db_convert_multi.py  (+30 more)
c_decomp/: README.md
config/: config.toml
inc/: README.md  cmacros.inc  gdi.inc  kernel.inc  user.inc  windows.inc
state/: mod-applied.txt  schema.sql
tests/: test_convert_to_pure_db.py
tools/: pyproject.toml
tools/dos/: BYTE_EXACT_LOOP.md  dosbuild.sh  extract_all.sh  fetch.sh  list_disks.sh  test_compile3.sh  test_full.sh
tools/mpa/: __init__.py
(+839 files in other folders)
