[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "win103-byteexact"
version = "0.1.0"
description = "Harness for matching decompilation of Windows 1.03"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "tomli>=2.0; python_version<'3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
mpa = "mpa.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["mpa"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
